--- a/index.html
+++ b/index.html
@@ -4,17 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        * {
-            text-align: center;
-        }
-
-        #btn {
-            margin: 10px;
-            padding: 5px 7px;
-        }
-    </style>
+    <title>Manjinder's Code</title>
 </head>
 
 <body>
