--- a/index.html
+++ b/index.html
@@ -16,30 +16,7 @@
 
     <button onclick="chk()" onmouseover="checkk(document.getElementById('txt').value)" id="btn"> Submit </button>
 
-    <script>
-        let txt = document.getElementById('txt');
-        let btn = document.getElementById('btn');
-
-        function checkk(a) {
-            if (a == "msa") {
-                btn.style.transform = "translateX(0)";
-                btn.style.color = "green";
-            } else {
-                btn.style.color = "red";
-                if (btn.style.transform == "translateX(16em)") {
-                    btn.style.transform = "translateX(-16em)";
-                }
-                else {
-                    btn.style.transform = "translateX(16em)";
-                }
-            }
-        }
-
-        function chk() {
-            alert("Button Pressed");
-        }
-
-    </script>
+<script src="script.js"></script>
 </body>
 
 </html>
